Sun Dec 14 20:21:23 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/docs/dell_poweredge_t105.rd: インストールする Linux カーネ
	  ルを linux-image-2.6-i686 に変更。

Sun Dec 14 20:18:34 2008  TAKAO Kouji  <kouji@takao7.net>

	* common/debian: deb パッケージを格納するためのディレクトリを追加。

	* common/debian/ipvsadm*: Linux カーネル 2.6.26 用の ipvsadm パッケー
	  ジを追加。

	* common/debian/keepalived*: Linux カーネル 2.6.26 用の keepalived
	  パッケージを追加。

Sun Sep 21 22:54:51 2008  TAKAO Kouji  <kouji@takao7.net>

	* これまでの作業手順を追加。

Sun Sep 21 21:27:08 2008  TAKAO Kouji  <kouji@takao7.net>

	* w101/docs: ドキュメントを格納するディレクトリを追加。

Local variables:
add-log-time-format: (lambda ()
  (let* ((time (current-time))
	 (system-time-locale "C")
	 (diff (+ (cadr time) 32400))
	 (lo (% diff 65536))
	 (hi (+ (car time) (/ diff 65536))))
  (format-time-string "%a %b %e %H:%M:%S %Y" (list hi lo) t)))
indent-tabs-mode: t
tab-width: 8
end: